--- a/hello-world-8880/kubernetesDeployment.yaml
+++ b/hello-world-8880/kubernetesDeployment.yaml
@@ -21,7 +21,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-world-service
+  name: hello-world-service-8880
 spec:
   selector:
     app: hello-world
